--- a/src/index.html
+++ b/src/index.html
@@ -57,28 +57,54 @@
 		<div class="review__inner container">
 			<h1 class="review__title">Отзывы</h1>
 			<div class="review__carousel row">
-				<div class="review__slide col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
-					<div class="review__author">
-						<img src="img/content/review-1.jpg">Екатерина В.
-						<div class="review__social-links">
-							<a href="#" class="review__social-links--vk"></a>
+				<div id="reviews" class="owl-carousel">
+					<div class="review__slide col-xs-12">
+						<div class="review__author">
+							<img src="img/content/review-1.jpg">Екатерина В.
+							<div class="review__social-links">
+								<a href="#" class="review__social-links--vk"></a>
+							</div>
+							<p>Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
+							<footer class="review__slide-footer">
+								Дата отдыха:<br>15.05.2015 - 20.05.2015
+							</footer>
 						</div>
-						<p>Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
-						<footer class="review__slide-footer">
-							Дата отдыха:<br>15.05.2015 - 20.05.2015
-						</footer>
 					</div>
-				</div>
-				<div class="review__slide col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
-					<div class="review__author">
-						<img src="img/content/review-2.jpg">Екатерина В.
-						<div class="review__social-links">
-							<a href="#" class="review__social-links--fb"></a>
+					<div class="review__slide col-xs-12">
+						<div class="review__author">
+							<img src="img/content/review-2.jpg">Екатерина В.
+							<div class="review__social-links">
+								<a href="#" class="review__social-links--fb"></a>
+							</div>
+							<p>Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведённые у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый приём персоналом.</p>
+							<footer class="review__slide-footer">
+								Дата отдыха:<br>01.06.2015 - 08.06.2015
+							</footer>
 						</div>
-						<p>Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведённые у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый приём персоналом.</p>
-						<footer class="review__slide-footer">
-							Дата отдыха:<br>01.06.2015 - 08.06.2015
-						</footer>
+					</div>
+					<div class="review__slide col-xs-12">
+						<div class="review__author">
+							<img src="img/content/review-1.jpg">Екатерина В.
+							<div class="review__social-links">
+								<a href="#" class="review__social-links--vk"></a>
+							</div>
+							<p>Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
+							<footer class="review__slide-footer">
+								Дата отдыха:<br>15.05.2015 - 20.05.2015
+							</footer>
+						</div>
+					</div>
+					<div class="review__slide col-xs-12">
+						<div class="review__author">
+							<img src="img/content/review-2.jpg">Екатерина В.
+							<div class="review__social-links">
+								<a href="#" class="review__social-links--fb"></a>
+							</div>
+							<p>Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведённые у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый приём персоналом.</p>
+							<footer class="review__slide-footer">
+								Дата отдыха:<br>01.06.2015 - 08.06.2015
+							</footer>
+						</div>
 					</div>
 				</div>
 				<div class="review__btn col-xs-12"><a href="" class="btn btn--bordered">Все отзывы</a></div>
