--- a/src/single_room.html
+++ b/src/single_room.html
@@ -5,7 +5,7 @@
 			<h1 class="single-room-card__title"><strong>Эконом</strong>от <span>3400</span> руб./сутки</h1>
 			<div class="single-room-card__content">
 				<div class="single-room-card__slider col-md-6">
-					<div class="single-room-card__slide"><img src="img/single-room-slide1.jpg"></div>
+					<div class="single-room-card__slide"><img src="img/content/single-room-slide1.jpg"></div>
 					<!-- <div class="single-room-card__slide"><img src="" alt=""></div> -->
 				</div>
 				<div class="single-room-card__description col-xs-12 col-md-6">
@@ -48,7 +48,7 @@
 					<div class="single-room-other-category__card">
 						<a href="#" class="single-room-other-category__link"></a>
 						<div class="single-room-other-category__img">
-							<img src="img/room-list-standart.jpg">
+							<img src="img/content/room-list-standart.jpg">
 						</div>
 						<div class="single-room-other-category__card-text"><strong>Стандарт</strong>от <span>4000</span> руб./сутки</div>
 					</div>
@@ -57,7 +57,7 @@
 					<div class="single-room-other-category__card">
 						<a href="#" class="single-room-other-category__link"></a>
 						<div class="single-room-other-category__img">
-							<img src="img/room-list-standart-plus.jpg">
+							<img src="img/content/room-list-standart-plus.jpg">
 						</div>
 						<div class="single-room-other-category__card-text"><strong>Стандарт+</strong>от <span>4500</span> руб./сутки</div>
 					</div>
@@ -66,7 +66,7 @@
 					<div class="single-room-other-category__card">
 						<a href="#" class="single-room-other-category__link"></a>
 						<div class="single-room-other-category__img">
-							<img src="img/room-list-lux.jpg">
+							<img src="img/content/room-list-lux.jpg">
 						</div>
 						<div class="single-room-other-category__card-text"><strong>Люкс</strong>от <span>5700</span> руб./сутки</div>
 					</div>
