--- a/src/room_list.html
+++ b/src/room_list.html
@@ -16,7 +16,7 @@
 				<div class="room-list-item__img hidden-lg">
 					<img src="img/content/room-list-econom.jpg">
 				</div>
-				<div class="room-list-item__text col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
+				<div class="room-list-item__text col-xs-12 col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
 					<p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Рассчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
 				</div>
 				<div class="room-list-item__btn col-xs-12">
