add homepage gallery description

--- a/src/index.html
+++ b/src/index.html
@@ -49,15 +49,22 @@
 	</section>
 
 	<section class="gallery container">
-		<div class="gallery__main"><img id="homepage-gallery-full" src="img/content/galley-slide1.jpg" class="gallery__main-img hidden-xs hidden-sm"></div>
+		<div class="gallery__main">
+			<img id="homepage-gallery-full" src="img/content/galley-slide1.jpg" class="gallery__main-img hidden-xs hidden-sm">
+			<div id="homepage-gallery-description" class="gallery__description">
+				<h2 class="gallery__description-title col-md-4">Коттедж: «Флагман»</h2>
+				<p class="gallery__description-text col-md-6">Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи.</p>
+				<a href="#" class="gallery__description-link col-md-2">Посмотреть &#187;</a>
+			</div>
+		</div>
 		<div id="homepage-gallery" class="gallery__thumbs owl-carousel">
-			<img src="img/content/galley-slide1.jpg">
-			<img src="img/content/galley-slide2.jpg">
-			<img src="img/content/galley-slide3.jpg">
-			<img src="img/content/galley-slide4.jpg">
-			<img src="img/content/galley-slide5.jpg">
-			<img src="img/content/galley-slide6.jpg">
-			<img src="img/content/galley-slide7.jpg">
+			<img src="img/content/galley-slide1.jpg" data-title="Коттедж: «Флагман»" data-text="Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи." data-link="#">
+			<img src="img/content/galley-slide2.jpg" data-title="Коттедж: «Флагман»" data-text="Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи." data-link="#">
+			<img src="img/content/galley-slide3.jpg" data-title="Коттедж: «Флагман»" data-text="Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи." data-link="#">
+			<img src="img/content/galley-slide4.jpg" data-title="Коттедж: «Флагман»" data-text="Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи." data-link="#">
+			<img src="img/content/galley-slide5.jpg" data-title="Коттедж: «Флагман»" data-text="Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи." data-link="#">
+			<img src="img/content/galley-slide6.jpg" data-title="Коттедж: «Флагман»" data-text="Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи." data-link="#">
+			<img src="img/content/galley-slide7.jpg" data-title="Коттедж: «Флагман»" data-text="Вид на Финский залив, 3 просторных комнаты, комфортная мебель, индивидуальная ванная комната - всё для отличного отдыха большой семьи." data-link="#">
 		</div>
 	</section>
 
